# sharpe

./: .dockerignore  .gitignore  CLAUDE.md  DECISIONS.md  DEMOVIDEO.md  Dockerfile  HARDENING.md  LICENSE  NIGHT-REPORT.md  PLAN.md  README.md  SHARPEFRONTEND.md  SUBMISSION.md  docker-compose.yml  judge.md  package-lock.json  package.json  tsconfig.base.json  vercel.json
.github/workflows/: ci.yml  pages.yml  programs.yml
apps/web/: index.html  package.json  tsconfig.json  vite.config.ts
apps/web/public/demo/: decisions.json  digest-30.json  digest-7.json  health.json  mm.json  reviews.json  settlements.json  status.json  track-record.json
apps/web/src/: App.tsx  main.tsx
apps/web/src/api/: client.ts  types.ts
apps/web/src/components/: EventCard.tsx  Footer.tsx  Header.tsx
docs/: BACKTEST.md  DEPLOY.md  MARKET-MAKING.md
docs/design/: SHARPE.dc.html  handoff.md
programs/: README.md
programs/registry/: Cargo.toml
programs/registry/src/: lib.rs
services/agent/: package.json  tsconfig.json
services/agent/src/: agent.ts  main.ts
services/agent/test/: boot-rebuild.test.ts  commit-wal.test.ts  determinism.test.ts  digest.test.ts  intelligence.test.ts  mm-live.test.ts  mm.test.ts  model.test.ts  registry.test.ts  risk.test.ts  stream.test.ts
services/agent/tools/: backtest.ts  capture-demo.ts  mm-backtest.ts  mm-validate.ts  synthesize.ts  verify-proof.ts
services/recorder/: package.json  tsconfig.json
services/recorder/src/: airdrop.ts  auth.ts  backfill.ts  bootstrap.ts  cli.ts  config.ts  flows.ts  recorder.ts  sse.ts  subscribe.ts  wallet.ts
(+51 files in other folders)
